improvements in determination of start times